[package]
name = "colorizex"
version = "0.1.3"
authors = ["Junfeng Li <lijunfen@amazon.com>"]
description = "A CLI that colorize"
homepage = "https://github.com/autozimu/colorizex"
repository = "https://github.com/autozimu/colorizex"
readme = "README.md"
keywords = ["cli", "color", "colorize"]
license = "MIT"

[dependencies]
failure = "0"
log = "0"

structopt = "0"

regex = "1"
colored = "1"

[dev-dependencies]
env_logger = "0"

[package.metadata.release]
no-dev-version = true
